elasticsearch.yml
# This is the elastic search statefulset file
---
apiVersion: v1
kind: Service
metadata:
  name: elastic-svc
  labels:
    app: elastic
spec:
  selector:
    app: elastic
  ports:
  - name: elastic-http
    port: 9200
  - name: elastic-tcp
    port: 9300

#######################################
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic
  labels:
    app: elastic
spec:
  serviceName: elastic
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
        runAsGroup: 1000
      containers:
      - name: elastic
        image: docker.elastic.co/elasticsearch/elasticsearch:7.1.0
        imagePullPolicy: Always
        ports:
        - name: elastic-http
          containerPort: 9200
        - name: elastic-tcp
          containerPort: 9300
        volumeMounts:
        - name: elastic-data
          mountPath: /usr/share/elasticsearch/data
        - name: elastic-config-vol
          mountPath: /usr/share/elasticsearch/config
        securityContext:
          # runAsUser: 1000
          allowPrivilegeEscalation: true
        #   fsGroup: 1000

      volumes:
      - name: elastic-config-vol
        configMap:
          name: elastic-config
          items:
          - key: config
            path: elasticsearch.yml

  volumeClaimTemplates:
  - metadata:
      name: elastic-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 3Gi
