kibana.yml
# This is the kibana deployment file
# This is the kibana deployment file
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
  - name: kibana-tcp
    port: 5601

#######################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  serviceName: kibana
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.kibana.co/kibana/kibana:7.1.0
        imagePullPolicy: Always
        ports:
        - name: kibana-tcp
          containerPort: 5601
        # env:
        #   - name: ES_JAVA_OPTS
        #     value: -Xmx256m -Xms256m
        volumeMounts:
        - name: kibana-config-vol
          mountPath: /usr/share/kibana/config/

      volumes:
      - name: kibana-config-vol
        configMap:
          name: kibana-config
          items:
          - key: config
            path: kibana.yml
