logstash.yml
# This is the Logstash deployment file
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-svc
  labels:
    app: logstash
spec:
  selector:
    app: logstash
  ports:
  - name: logstash-tcp
    port: 5000

#######################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  # serviceName: logstash
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:7.1.0
        imagePullPolicy: Always
        ports:
        - name: logstash-tcp
          containerPort: 5000
        volumeMounts:
        - name: logstash-pipeline-vol
          mountPath: /usr/share/logstash/pipeline/
        - name: logstash-config-vol
          mountPath: /usr/share/logstash/config/

      volumes:
      - name: logstash-config-vol
        configMap:
          name: logstash-config
          items:
          - key: config
            path: logstash.yml
      - name: logstash-pipeline-vol
        configMap:
          name: logstash-pipeline
          items:
          - key: config
            path: logstash.conf
